--- a/MVC-OnCo/public/css/main.css
+++ b/MVC-OnCo/public/css/main.css
@@ -1029,3 +1029,130 @@ span {
 .viewDetail .groupsList button {
     float: right;
 }
+
+/* add edit-contact modal */
+
+.modalContactDialog {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(145, 145, 145, 0.8);
+    z-index: 99999;
+    opacity: 0;
+    pointer-events: none;
+}
+
+.modalContactDialog:target {
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.modalContactDialog>div {
+    overflow-x: hidden;
+    position: relative;
+    margin: 5% auto;
+    padding: 3% 5%;
+    background: #fff;
+    width: 30%;
+    height: 70%;
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
+
+.modalContactDialog .right .header {
+    margin-top: -2em;
+    text-align: center;
+}
+
+.modalContactDialog .right .form-element {
+    display: grid;
+}
+
+.modalContactDialog .right .inputContact {
+    width: 20vw;
+    padding-top: 1.5em;
+    font-size: 15px;
+    border: none;
+    border-bottom: 1px solid;
+}
+
+.modalContactDialog .right #photoContact {
+    margin-top: 1em;
+    font-size: 15px;
+}
+
+.modalContactDialog .right label {
+    margin-top: 1em;
+    font-size: 1.2em;
+}
+
+.modalContactDialog .right #editContactBtn {
+    font-size: 1.5vw;
+    font-weight: bold;
+    color: #4682b4;
+    text-decoration: none;
+    padding: 10px 30px 10px 30px;
+    border-radius: 23px;
+    background-color: rgb(6, 8, 61);
+    background-image: linear-gradient(rgb(6, 8, 61), rgb(10, 10, 15));
+    margin-left: 4vw;
+    position: absolute;
+    margin-top: 1.5em;
+    margin-bottom: 2em;
+}
+
+.modalContactDialog .right .close {
+    background: #333333;
+    color: #FFFFFF;
+    line-height: 25px;
+    position: absolute;
+    right: 12px;
+    text-align: center;
+    top: 12px;
+    width: 24px;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 12px;
+    box-shadow: 1px 1px 3px #000;
+}
+
+.modalContactDialog .right .close:hover {
+    background: rgb(13, 29, 97);
+}
+
+@media screen and (max-width: 1000px) and (min-width: 700px) {
+    .modalContactDialog>div {
+        width: 60%;
+    }
+    /* .right .editContact label, */
+    .right .editContact input,
+    .right .editContact .button {
+        font-size: 2vw;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .modalContactDialog>div {
+        width: 75%;
+    }
+    /* .right .editContact label, */
+    .right .editContact input,
+    .right .editContact .button {
+        font-size: 2.5vw;
+    }
+}
+
+@media screen and (max-width: 455px) {
+    .editContactModal>div {
+        width: 75%;
+    }
+    /* .right .editContact label, */
+    .right .editContact input,
+    .right .editContact .button {
+        font-size: 4vw;
+    }
+}
