--- a/MVC-OnCo/public/css/main.css
+++ b/MVC-OnCo/public/css/main.css
@@ -1030,6 +1030,18 @@ span {
     float: right;
 }
 
+.buttonAddToGroup {
+    font: bold 13px Arial;
+    text-decoration: none;
+    background-color: #EEEEEE;
+    color: #333333;
+    padding: 2px 6px 2px 6px;
+    border-top: 1px solid #CCCCCC;
+    border-right: 1px solid #333333;
+    border-bottom: 1px solid #333333;
+    border-left: 1px solid #CCCCCC;
+    }
+
 /* add edit-contact modal */
 
 .modalContactDialog {
