--- a/MVC-OnCo/public/css/main.css
+++ b/MVC-OnCo/public/css/main.css
@@ -280,6 +280,27 @@ main .addfilter:hover .dropdown-filter {
     display: block;
 }
 
+main .filter_search {
+    width: 100px;
+    height: 30px;
+    padding-top: 3px;
+    text-align: center;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 1.5vw;
+    margin: 10px auto;
+    background: rgb(6, 8, 61);
+}
+
+main #ErrorSearch {
+    text-align: center;
+}
+
+main .nofound {
+    margin: auto;
+}
+
 main .export .rdo {
     display: block;
     float: left;
@@ -1010,7 +1031,8 @@ span {
     color: rgb(13, 29, 97);
 }
 
-.viewDetail ul {
+.viewDetail ul,
+.descriptionGroupForm .lab ul {
     list-style-type: none;
 }
 
@@ -1040,7 +1062,8 @@ span {
     border-right: 1px solid #333333;
     border-bottom: 1px solid #333333;
     border-left: 1px solid #CCCCCC;
-    }
+}
+
 
 /* add edit-contact modal */
 
@@ -1134,6 +1157,10 @@ span {
 
 .modalContactDialog .right .close:hover {
     background: rgb(13, 29, 97);
+}
+
+.descriptionGroupForm {
+    word-wrap: break-word;
 }
 
 @media screen and (max-width: 1000px) and (min-width: 700px) {
